--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -35,7 +35,7 @@ apikey.google=
 # note: currently ogp will use only /select and /terms
 solr.url.internal=
 #solr.url.external=http://geodata.tufts.edu/solr
-solr.url.external=http://localhost:8080/solr
+solr.url.external=http://107.21.247.220:8082
 
 
 # if you are using ogp to proxy download and preview of layers, set it
@@ -57,7 +57,7 @@ proxy.tufts.geoserver.username=chris
 proxy.tufts.geoserver.password=chupacabra
 
 # this should eventually go in an auth module, I think.
-login.repository=tufts
+login.repository=disable
 #'form' or 'iframe'
 login.type=form
 #'login' for local form (ldap or default username and password)
@@ -74,9 +74,10 @@ login.secureDomain=https://localhost:8443
 # deleted from the download folder java.temp/${ogp.downloadDir}
 ogp.downloadDir=ogpdownload
 
-styleSheet.fgdc=WEB-INF/xml/FGDC_V2_a.xsl
+#styleSheet.fgdc=WEB-INF/xml/FGDC_V2_a.xsl
+styleSheet.fgdc=WEB-INF/xml/xml2html/fgdc/fgdc2html.xsl
 #styleSheet.iso19139=WEB-INF/xml/iso2html/xml-to-html-ISO.xsl
-styleSheet.iso19139=WEB-INF/xml/iso2html/pacioos-iso-html.xsl
+styleSheet.iso19139=WEB-INF/xml/xml2html/iso19139/iso2html.xsl
 styleSheet.dublin=
 
 cleanupInterval=30000
