--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -77,6 +77,7 @@ login.secureDomain=https://localhost:8443
 ogp.downloadDir=ogpdownload
 
 #styleSheet.fgdc=WEB-INF/xml/FGDC_V2_a.xsl
+metadata.css=/resources/css/metadata.css
 styleSheet.fgdc=WEB-INF/xml/xml2html/fgdc/fgdc2html.xsl
 #styleSheet.iso19139=WEB-INF/xml/iso2html/xml-to-html-ISO.xsl
 styleSheet.iso19139=WEB-INF/xml/xml2html/iso19139/iso2html.xsl
