-Fix 2 bugs in WMS requests:     -request version 1.1.0 for geowebcache     -remove "tiled=true" for uncached requests (with included SLD body) -Remove default logo text value. -change drop shadow values -add maximum size for autocomplete menus -add icon for "no preview available" and new icon for "preview at external site" -add Harabara font for consistency with OpenGeoportal.org -changed several native checkboxes to styled checkboxes for consistency. Also refactored styled checkboxes so that they are backed by actual HTML checkboxes. -changed menu spacing -added an event mask so that the map doesn't capture mouse events when dragging or resizing other objects -cleaned up css for preview controls, fixed alignment in Chrome -improved event handling for the color picker. -cleaned up some stray "console.log" commands

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -10,9 +10,9 @@ ogp.domain=http://localhost:8080
 ogp.cssLocalized=
 ogp.jsLocalized=
 
-# default is OpenGeoportal
+# default is blank
 #primary is the main text color (default black) and offset will have the css class offsetColor
-ogp.pageTitle.primary=
+ogp.pageTitle.primary=OpenGeoportal
 ogp.pageTitle.offset=
 
 # comma separated list of repository ids (see repositories.properties)
