--- a/geoportal_1/src/main/webapp/WEB-INF/web.xml
+++ b/geoportal_1/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,34 @@
 		<listener-class>org.opengeoportal.download.RequestStatusSessionListener</listener-class>
 	</listener>
 
-	<filter>
+    <filter>
+        <filter-name>WebResourceOptimizer</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetBeanName</param-name>
+            <param-value>wroFilter</param-value>
+        </init-param>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>WebResourceOptimizer</filter-name>
+        <url-pattern>/wro/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>WroContextFilter</filter-name>
+        <filter-class>ro.isdc.wro.http.WroContextFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>WroContextFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
 		<filter-name>CORS</filter-name>
 		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
 		<init-param>
