--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.opengeoportal</groupId>
 	<artifactId>geoportal</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.BETA-2</version>
+    <version>2.1.BETA</version>
 	<name>opengeoportal webapp</name>
 	<url>http://opengeoportal.org</url>
 	<repositories>
@@ -30,6 +30,7 @@
 		<httpcomponents.version>4.3.6</httpcomponents.version>
 		<wro4j.version>1.7.7</wro4j.version>
 		<slf4j.version>1.7.12</slf4j.version>
+        <solrj.version>5.1.0</solrj.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<warFile.name>opengeoportal</warFile.name>
@@ -111,13 +112,14 @@
 
 
 		<!-- HttpComponents -->
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.3.3</version>
-		</dependency>
+        <!--		<dependency>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpcore</artifactId>
+                    <version>4.4</version>
+                </dependency>-->
 
-		<dependency>
+
+        <dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${httpcomponents.version}</version>
@@ -140,10 +142,11 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
-			<version>4.10.1</version>
+            <version>${solrj.version}</version>
 		</dependency>
 
-		<!-- Spring security -->
+
+        <!-- Spring security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
