-add wro group to handle javascript library resources to minimize number of javascript file downloads -alter WroResourceRetriever to handle multiple wro groups

--- a/geoportal_1/src/main/webapp/WEB-INF/wro.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/wro.properties
@@ -1,4 +1,3 @@
 managerFactoryClassName=ro.isdc.wro.manager.factory.ConfigurableWroManagerFactory
-preProcessors=cssUrlRewriting,cssImport,cssMin
-postProcessors=jsMin
+preProcessors=cssUrlRewriting,cssImport,yuiCssMin,jsMin
 uriLocators=servletContext,uri,classpath
