-bugfix: support layer ids with forward slashes in metadata controller -bugfix: escape layer id string in Solr query for metadata -bugfix: restricted layer warning missing template parameters -remove duplicate column definitions in searchresults table -add support for geoblacklight node backlinking -add error handling for metadata -initial work on arcgisonline upload

--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -66,10 +66,13 @@ pasda.sourceIconClass=pasdaIcon
 stanford.shortName=Stanford
 stanford.fullName=Stanford University
 stanford.sourceIconClass=stanfordIcon
+stanford.nodeType=geoblacklight
 
 princeton.shortName=Princeton
 princeton.fullName=Princeton University
 princeton.sourceIconClass=princetonIcon
+princeton.nodeType=geoblacklight
+
 
 
 
