Updated repository properties with UA info

--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -42,4 +42,10 @@ unwfp.sourceIconClass=unIcon
 massgis.shortName=MassGIS
 massgis.fullName=MassGIS
 massgis.sourceIconClass=massgisIcon
+
+uarizona.shortName=UArizona
+uarizona.fullName=University of Arizona
+uarizona.sourceIconClass=uarizonaIcon
+uarizona.noteType=ogp2
+uarizona.url=https://geo.library.arizona.edu
 				
