commented out code to show restricted checkbox on basic search

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -36,8 +36,8 @@ apikey.google=
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 solr.url.internal=
-#solr.url.external=http://geodata.tufts.edu/solr
-solr.url.external=http://107.21.247.220/solr
+solr.url.external=http://data.opengeoportal.org/solr
+
 
 
 # if you are using ogp to proxy download and preview of layers, set it
@@ -55,8 +55,8 @@ proxy.tufts.accessLevel=restricted
 
 proxy.tufts.geoserver.internal=http://localhost:8080/geoserver
 proxy.tufts.geoserver.external=restricted
-proxy.tufts.geoserver.username=chris
-proxy.tufts.geoserver.password=chupacabra
+proxy.tufts.geoserver.username=dummy_user
+proxy.tufts.geoserver.password=dummy_password
 
 # this should eventually go in an auth module, I think.
 login.repository=disable
