--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -43,6 +43,10 @@ massgis.shortName=MassGIS
 massgis.fullName=MassGIS
 massgis.sourceIconClass=massgisIcon
 
+purdue.shortName=Purdue
+purdue.fullName=Purdue
+purdue.sourceIconClass=purdueIcon
+
 columbia.shortName=Columbia
 columbia.fullName=Columbia University
 columbia.sourceIconClass=columbiaIcon
