moved image processing code from proxy package to org.opengeoportal.image. added beta support for ArcGIS Server layers.

--- a/geoportal/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal/src/main/webapp/WEB-INF/ogp.properties
@@ -34,7 +34,7 @@ apikey.google=
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 solr.url.internal=
-solr.url.external=http://geodata.tufts.edu/solr
+solr.url.external=http://data.opengeoportal.org/solr/ogp
 #solr.url.external=http://localhost:8080/solr
 
 
