Initial commit. Integration of proxy servlet into OGP. Proxy deploys conditionally based on the value "solr.proxy.enabled" in ogp.properties

--- a/geoportal_1/pom.xml
+++ b/geoportal_1/pom.xml
@@ -199,6 +199,13 @@
 			<artifactId>solr-solrj</artifactId>
 			<version>4.5.1</version>
 		</dependency>
+		<!-- solr proxy -->
+		<dependency>
+			<groupId>org.mitre.dsmiley.httpproxy</groupId>
+			<artifactId>smiley-http-proxy-servlet</artifactId>
+			<version>1.9</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
