--- a/geoportal_1/src/main/resources/log4j.properties
+++ b/geoportal_1/src/main/resources/log4j.properties
@@ -19,8 +19,8 @@
 #
 #------------------------------------------------------------------------------
 log4j.rootCategory=INFO, S
-
-#log4j.logger.org.OpenGeoPortal.Test=DEBUG
+#log4j.logger.org.opengeoportal=DEBUG
+#log4j.logger.org.opengeoportal.Test=DEBUG
 
 #------------------------------------------------------------------------------
 #
