--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -30,13 +30,16 @@ apikey.google=
 
 # the url given to the web browser so that it can query solr directly
 # if .internal is blank the external value will be used internally as well
-# By default, this value will point to the Tufts production solr instance
+# By default, this value will point to the data.opengeoportal.org solr instance
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
-solr.url.internal=
-solr.url.external=http://geodata.tufts.edu/solr
-#solr.url.external=http://localhost:8080/solr
-
+# no trailing slash
+solr.url.internal=http://data.opengeoportal.org/solr/ogp
+solr.url.external=http://data.opengeoportal.org/solr/ogp
+# whether or not to proxy solr.url.internal (boolean)
+solr.proxy.enabled=false
+# the relative path for the solr proxy. Leading slash is required.
+solr.proxy.path=/solr
 
 # if you are using ogp to proxy download and preview of layers, set it
 # up here.  (form is: proxy.${repository id}.*)
