polimi icon, css class and entry in repositories.properties added

--- a/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/repositories.properties
@@ -46,6 +46,11 @@ massgis.sourceIconClass=massgisIcon
 uarizona.shortName=UArizona
 uarizona.fullName=University of Arizona
 uarizona.sourceIconClass=uarizonaIcon
-uarizona.noteType=ogp2
+uarizona.nodeType=ogp2
 uarizona.url=https://geo.library.arizona.edu
-				
+polimi.shortName=Polimi
+polimi.fullName=Politecnico di Milano
+polimi.sourceIconClass=polimiIcon
+polimi.nodeType=ogp2
+polimi.url=https://geodata.polimi.it/opengeoportal
+
