--- a/geoportal/src/main/webapp/WEB-INF/ogp_config.json
+++ b/geoportal/src/main/webapp/WEB-INF/ogp_config.json
@@ -158,6 +158,7 @@
     ],
     "basemaps": [
         {
+            "displayName": "OpenStreetMap",
             "url": "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
             "maxZoom": 19,
             "attribution": "&copy; <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a>",
