integrate solr proxy code into this branch. bump spring, jackson, httpcomponents dependencies

--- a/geoportal/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal/src/main/webapp/WEB-INF/ogp.properties
@@ -33,10 +33,15 @@ apikey.google=
 # By default, this value will point to the OGP community production solr instance
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
-solr.url.internal=
+solr.url.internal=http://data.opengeoportal.org/solr/ogp
 solr.url.external=http://data.opengeoportal.org/solr/ogp
 #solr.url.external=http://localhost:8080/solr
 
+# whether or not to proxy the solr instance at solr.url.internal (boolean)
+# if true, the client will use solr.proxy.path instead of the value at solr.url.external
+solr.proxy.enabled=true
+# the relative path for the solr proxy. Leading slash is required.
+solr.proxy.path=/solr
 
 # if you are using ogp to proxy download and preview of layers, set it
 # up here.  (form is: proxy.${repository id}.*)
