--- a/geoportal/pom.xml
+++ b/geoportal/pom.xml
@@ -26,11 +26,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <org.springframework.version>4.3.4.RELEASE</org.springframework.version>
-        <org.springframework.security.version>4.2.0.RELEASE</org.springframework.security.version>
+        <org.springframework.version>4.3.14.RELEASE</org.springframework.version>
+        <org.springframework.security.version>4.2.3.RELEASE</org.springframework.security.version>
         <geotools.version>16.0</geotools.version>
-        <jackson.version>2.8.4</jackson.version>
-        <httpcomponents.version>4.5.2</httpcomponents.version>
+        <jackson.version>2.9.0</jackson.version>
+        <httpcomponents.version>4.5.5</httpcomponents.version>
         <slf4j.version>1.7.21</slf4j.version>
         <wro4j.version>1.8.0</wro4j.version>
 	</properties>
@@ -258,6 +258,12 @@
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mitre.dsmiley.httpproxy</groupId>
+            <artifactId>smiley-http-proxy-servlet</artifactId>
+            <version>1.10</version>
         </dependency>
 
 
