fix map behavior with Leaflet (integration with UI elements, etc.) fix 'Save Image' and 'Print' functions fix geocoder integration with Leaflet fix search integration with Leaflet fix get feature info integration with Leaflet

--- a/geoportal/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal/src/main/webapp/WEB-INF/ogp.properties
@@ -34,8 +34,9 @@ apikey.google=
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 solr.url.internal=http://data.opengeoportal.org/solr/ogp
-solr.url.external=http://data.opengeoportal.org/solr/ogp
-#solr.url.external=http://localhost:8080/solr
+
+# this value is ignored if 'solr.proxy.enabled' is set to 'true'. Should prefer solr.proxy.enabled.
+# solr.url.external=http://data.opengeoportal.org/solr/ogp
 
 # whether or not to proxy the solr instance at solr.url.internal (boolean)
 # if true, the client will use solr.proxy.path instead of the value at solr.url.external
@@ -69,6 +70,7 @@ login.type=form
 #'weblogin' for noop iframe login (external web form auth with no deep Spring Security integration)
 #'restricted/weblogin' for iframe login (external web form auth with deep Spring Security integration [CAS, potentially Shib])
 login.url=login
+# this should just be the https version of the domain OGP is running on.
 login.secureDomain=https://localhost:8443
 #if you're using the nop iframe login, you'll need to uncomment these values and insert appropriate values (you can just use the ones in
 #the default authenticationManager (see security-app-context.xml)
