Fix for change to google maps policy that requires an API key for sites. - added value 'apikey.gmaps' to ogp.properties. Note that you will need to supply your own API key - added new property to OgpConfig object, handling in HomeController and the includes.jspf

--- a/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
+++ b/geoportal_1/src/main/webapp/WEB-INF/ogp.properties
@@ -27,14 +27,17 @@ ogp.repositories.defaultSelected=all
 apikey.analytics=
 apikey.google=
 
+# google maps now requires an API key
+apikey.gmaps=YOUR_GOOGLE_MAPS_API_KEY
+
 
 # the url given to the web browser so that it can query solr directly
 # if .internal is blank the external value will be used internally as well
-# By default, this value will point to the Tufts production solr instance
+# By default, this value will point to the data.opengeoportal.org solr instance
 # .external needs to be a web accessible url
 # note: currently ogp will use only /select and /terms
 solr.url.internal=
-solr.url.external=http://geodata.tufts.edu/solr
+solr.url.external=http://data.opengeoportal.org/solr/ogp
 #solr.url.external=http://localhost:8080/solr
 
 
@@ -56,6 +59,7 @@ proxy.tufts.geoserver.external=restricted
 proxy.tufts.geoserver.username=chris
 proxy.tufts.geoserver.password=chupacabra
 
+# which repository the user should be able to log in to for restricted data
 # this should eventually go in an auth module, I think.
 login.repository=tufts
 #'form' or 'iframe'
@@ -64,7 +68,10 @@ login.type=form
 #'weblogin' for noop iframe login (external web form auth with no deep Spring Security integration)
 #'restricted/weblogin' for iframe login (external web form auth with deep Spring Security integration [CAS, potentially Shib])
 login.url=login
+
+# the secureDomain value should be an https domain for the user to log in to.
 login.secureDomain=https://localhost:8443
+
 #if you're using the nop iframe login, you'll need to uncomment these values and insert appropriate values (you can just use the ones in
 #the default authenticationManager (see security-app-context.xml)
 #login.nop.user=
